--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            "spaces"
         ],
         "linebreak-style": [
             "error",
