some small bugs not fixed yet, maybe later

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# solutions:
-bwa_u2_ravenous_solution_1.zip
-bwa_u2_ravenous_solution_2.zip
+# zip files:
+/zipFiles
 
